--- a/CofreAlarme/AndroidManifest.xml
+++ b/CofreAlarme/AndroidManifest.xml
@@ -26,6 +26,7 @@
             android:name=".CofreActivity"
             android:label="@string/title_activity_cofre" >
         </activity>
+        <receiver android:name=".Alarm_Receiver" />
     </application>
 
 </manifest>
