--- a/CofreAlarme/AndroidManifest.xml
+++ b/CofreAlarme/AndroidManifest.xml
@@ -18,16 +18,13 @@
         <activity
             android:screenOrientation="portrait"
             android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:launchMode="singleTop" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity
-            android:name=".CofreActivity"
-            android:label="@string/title_activity_cofre" >
         </activity>
         <receiver android:name=".Alarm_Receiver" />
     </application>
